@@ -9,6 +9,7 @@ xfsprogs-1.3.1 (15 Jul 2001)
 	- BLKSZSET ioctl now conditional via the Makefile (off by default)
 	- rework some of the Debian packaging rules
 	- fix sign of BLKGETSIZE ioctl argument in libxfs
+	- updated xfs_fs.h with DMAPI setdm details for dump/restore
 
 xfsprogs-1.3.0 (11 Jul 2001)
 	- reworked Makefiles to use libtool
